Authorization update
